--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,64 @@
-body{
+$base-link-color: #a3b3bf;
+$heading-dark-blue: #083451;
+$overlay-blue : #1275bf;
+$small-heading-blue: #0069b6;
+$button-background-gray: #a3b3bf;
+$body-text-gray: #5e686f;
+$footer-text: #a3b3bf;
+
+@mixin border-radius($radius) {
+  -webkit-border-radius: $radius;
+     -moz-border-radius: $radius;
+      -ms-border-radius: $radius;
+          border-radius: $radius;
+}
+
+@mixin bottom-links-bar {
+  float: left;
+  font-family: 'oswald' sans serif;
+  font-size: 29px;
+  margin-left: 6%;
+}
+
+@mixin read-later-layout {
+  position: relative;
+  height: 30px;
+  width: 128px;
+  left: 26.4%;
+}
+
+@mixin read-comments-layout {
+  height: 30px;
+  width: 158px;
+  margin-left: .5%;
+}
+
+@mixin share-layout {
+  position: relative;
+  height: 30px;
+  width: 154px;
+  left: 47.6%;
+}
+
+@mixin big-author-layout {
+  width: 84px;
+  height: 84px;
+  @include border-radius(50%);
+  position: relative;
+  left: 35.5%;
+  right: 35.5%;
+}
+
+@mixin popular-posts-layout {
+  width: 25%;
+  height: 330px;
+  float: left;
+}
+
+body {
   margin: 0;
 }
+
 header{
   position: relative;
   margin: 0;
@@ -14,7 +72,7 @@ header{
 
 .topoverlay{
   position: absolute;
-  background-color: #1275bf;
+  background-color: $overlay-blue;
   z-index: 2;
   top: 0;
   right: 0;
@@ -47,7 +105,7 @@ header{
   letter-spacing: .00001em;
   width: 500px;
   margin-right: 0;
-  color: #083451;
+  color: $heading-dark-blue;
 }
 
 .aboutsearch{
@@ -59,7 +117,7 @@ header{
 }
 
 .about {
-  color: #083451;
+  color: $heading-dark-blue;
   margin-right: 10px;
 }
 
@@ -71,7 +129,7 @@ header{
 
 .aboutsearch > a:link{
   text-decoration: none;
-  color: #083451;
+  color: $heading-dark-blue;
 }
 
 .headertextcontainer{
@@ -100,7 +158,7 @@ h1 {
   text-align: center;
   font-size: 15px;
   letter-spacing: 0.015em;
-  color: #083451;
+  color: $heading-dark-blue;
 }
 
 .content {
@@ -113,7 +171,7 @@ h1 {
 h2 {
   font-family: 'Oswald', sans-serif;
   font-size: 63px;
-  color: #083451;
+  color: $heading-dark-blue;
   margin-top: 64px;
   margin-left: 0;
   margin-bottom: 0;
@@ -130,26 +188,26 @@ h2 {
 }
 
 .smallauthor-overlay {
-  border-radius: 50px;
+  @include border-radius(50%);
   height: 22px;
   width: 22px;
   position: relative;
   left: 1%;
   top: 7px;
   margin-bottom: -22px;
-  background-color: #1275bf;
+  background-color: $overlay-blue;
   z-index: 10;
   opacity: .6;
-}
 
-.smallauthor-overlay:hover {
+  &:hover {
   transition-property: opacity;
-  transition-duration: 1s;
   opacity:0;
+  transition-duration: 1s;
+}
 }
 
 .smallauthor {
-  border-radius: 50px;
+  @include border-radius(50%);
   height: 22px;
   width: 22px;
   position: relative;
@@ -160,7 +218,7 @@ h2 {
 
 .smallname  {
   float: left;
-  color: #055faa;
+  color: $small-heading-blue;
   position: relative;
   top: 10px;
   left: 2.5%;
@@ -175,7 +233,7 @@ h2 {
   position: relative;
   left: 4.5%;
   top: 11px;
-  color: #a0b3c0;
+  color: $base-link-color;
 }
 
 .articlebody {
@@ -187,26 +245,22 @@ h2 {
   margin-top: 26px;
 }
 
-.woah {
-  border-left: 1px solid #a0b3c0;
-}
-
 .woah{
   font-size: 26px;
-  color: #106db3;
+  color: $heading-dark-blue;
   margin-left: 8px;
   padding-top: 8px;
   padding-bottom: 8px;
   margin-top: 26px;
   padding-left: 17px;
-  border-left: 2px solid #d3d3d3;
+  border-left: 2px solid $base-link-color;
 }
 
 p {
   letter-spacing: -1px;
   line-height: 26px;
   padding-right: 34px;
-  color: #5e686f;
+  color: $body-text-gray;
 }
 
 .pfour {
@@ -219,13 +273,10 @@ p {
 
 
 .readcomments {
-  height: 30px;
-  width: 158px;
+  @include read-comments-layout;
   margin-top: -30px;
-  margin-left: .5%;
-  background-color: #a3b3bf;
+  background-color: $button-background-gray;
   z-index: 1;
-
 }
 
 .readbuttonimg {
@@ -262,25 +313,23 @@ p {
 .imgcont {
   height: 30px;
   width: 33px;
-  background-color: #5e686f;
+  background-color: $body-text-gray;
   float: left;
 }
 
 .readcommentsoverlay{
   position:relative;
-  height: 30px;
-  width: 158px;
+  @include read-comments-layout;
   z-index: 10;
   margin-top: 19px;
-  margin-left: .5%;
-  background-color:#1275bf;
+  background-color: $overlay-blue;
   opacity: 0;
-}
 
-.readcommentsoverlay:hover {
+  &:hover {
   transition-property: opacity;
   transition-duration: 1s;
   opacity: .6;
+}
 }
 
 .readlaterimg{
@@ -292,30 +341,24 @@ p {
 }
 
 .readlateroverlay{
-  position:relative;
-  height: 30px;
-  width: 128px;
+  @include read-later-layout;
   z-index: 15;
-  background-color:#1275bf;
+  background-color: $overlay-blue;
   opacity: 0;
-  left: 26.4%;
   margin-top: -46px;
-}
 
-.readlateroverlay:hover{
+  &:hover{
   transition-property: opacity;
   transition-duration: 1s;
   opacity: .6;
 }
+}
 
 .readlater {
-  position: relative;
-  height: 30px;
-  width: 128px;
+  @include read-later-layout;
+  top: -46px;
   z-index: 1;
-  background-color: #a3b3bf;
-  left: 26.4%;
-  margin-top: -46px;
+  background-color: $button-background-gray;
 }
 
 .readlatertext {
@@ -330,20 +373,23 @@ p {
 }
 
 .shareoverlay {
-  height: 30px;
-  width: 154px;
-  margin-top: -30px;
-  left: 47.6%;
-  background-color: #1275bf;
-  position: relative;
+  @include share-layout;
+  margin-top: -78px;
+  background-color: $overlay-blue;
   opacity: 0;
   z-index: 15;
-}
 
-.shareoverlay:hover {
+  &:hover {
   transition-property: opacity;
   transition-duration: 1s;
   opacity: .6;
+}
+}
+
+.share {
+  @include share-layout;
+  margin-top:-32px;
+  background-color: $button-background-gray;
 }
 
 .shareimg{
@@ -364,17 +410,6 @@ p {
   padding-right: 0;
 }
 
-.share {
-  height: 30px;
-  width: 154px;
-  margin-top:-30px;
-  position: relative;
-  left: 47.6%;
-  background-color: #a3b3bf;
-}
-
-
-
 
 .sidebar  {
   margin-right: 12.5%;
@@ -383,33 +418,23 @@ p {
 }
 
 .bigauthor-overlay {
-  width: 84px;
-  height: 84px;
-  border-radius: 200px;
-  position: relative;
+@include big-author-layout;
   top: 12px;
-  left: 35.5%;
-  right: 35.5%;
-  background-color: #1275bf;
+  background-color: $overlay-blue;
   opacity: .7;
   z-index: 10;
-}
 
-.bigauthor-overlay:hover {
+  &:hover{
   transition-property: opacity;
   transition-duration: 1s;
   opacity: 0;
 }
+}
 
 .bigauthor {
-  width: 84px;
-  height: 84px;
-  border-radius: 200px;
-  position: relative;
+  @include big-author-layout;
   opacity: 1;
   top: -72px;
-  left: 35.5%;
-  right: 35.5%;
 }
 
 
@@ -420,7 +445,7 @@ h5 {
   margin-bottom: 0;
   margin-left: 33%;
   letter-spacing: -1px;
-  color: #0069b6;
+  color: $small-heading-blue;
 }
 
 .connectlinks-box{
@@ -431,21 +456,26 @@ h5 {
 
 .connectlinks {
   text-decoration: none;
-  color: #a0b3c0
+  color: $base-link-color;
 }
 
-#twitter {
+.twitter {
   padding-right: 10px;
+  text-decoration: none;
 }
 
-#facebook {
+.facebook {
   padding: 5px;
-  border-left: 1px #a0b3c0 solid;
-  border-right: 1px #a0b3c0 solid;
+  border-left: 1px $base-link-color solid;
+  border-right: 1px $base-link-color solid;
+  text-decoration: none;
+  color: $base-link-color;
 }
 
-#instagram {
+.instagram {
   padding-left: 10px;
+  text-decoration: none;
+  color: $base-link-color;
 }
 
 .ad {
@@ -454,21 +484,21 @@ h5 {
   margin-top: -246px;
   z-index: 1;
 }
+
 .ad-overlay {
   width: 276px;
   height: 299px;
   position: relative;
   top: 53px;
-  background-color: #1275bf;
+  background-color: $overlay-blue;
   z-index: 10;
   opacity: .6;
-}
 
-
-.ad-overlay:hover {
+  &:hover {
   transition-property: opacity;
   transition-duration: 1s;
   opacity: 0;
+}
 }
 
 .aboutad {
@@ -477,12 +507,12 @@ h5 {
   right: -70%;
   font-family: 'Open sans' sans-serif;
   font-size: 13px;
-  color: #a0b3c0;
+  color: $base-link-color;
 }
 
 h4 {
   font-family: 'Oswald' sans serif;
-  color: #106db3;
+  color: $heading-dark-blue;
   font-size: 17px;
   letter-spacing: -.5px;
 }
@@ -492,7 +522,7 @@ h4 {
 }
 
 .sidebarsection-content > a {
-  color: #a0b3c0;
+  color: $base-link-color;
 }
 
 .sidebarsection-content {
@@ -502,18 +532,17 @@ h4 {
   letter-spacing: -.5px;
   margin-top: -17px;
   line-height: 1.715em;
-  color: #a0b3c0;
+  color: $base-link-color;
 }
 
 a {
-  color: #a0b3c0;
-}
+  color: $base-link-color;
 
-a:hover {
+  &:hover {
   transition-property: color;
   transition-duration: .5s;
   color: blue;
-
+}
 }
 
 .posttitle {
@@ -524,87 +553,83 @@ a:hover {
   font-size: 64px;
   font-family: 'Oswald' sans-serif;
   text-align: center;
-  color: #083452;
-  border-top: 1px solid #e1e7ea;
+  color: $heading-dark-blue;
+  border-top: 1px solid $body-text-gray;
 }
 
 
 .overlay {
-  width: 25%;
-  height: 330px;
-  float: left;
-  background-color: #1275bf;
+  @include popular-posts-layout;
+  background-color: $overlay-blue;
   opacity: .9;
   position: relative;
   z-index: 15;
-}
 
-.overlay:hover {
+  &:hover {
   transition-property: opacity;
   transition-duration: 1s;
   opacity: 0;
 }
+}
 
 .postoverlaytitle {
-  float: left;
-  font-family: 'oswald' sans serif;
-  font-size: 29px;
-  margin-left: 6%;
+  @include bottom-links-bar;
   margin-right: 6%;
   margin-top: 86%;
   opacity: 1;
-  color: #003353;
+  color: $heading-dark-blue;
   position:relative;
   z-index: 25;
 }
 
-#oystertitle {
+.postoverlaytitlelong {
+  @include bottom-links-bar;
+  opacity: 1;
+  color: $heading-dark-blue;
+  position:relative;
+  z-index: 25;
   margin-top: 75.5%;
   line-height: 35px;
   margin-right: 7%;
-
 }
 
 .popular {
-  width: 25%;
-  height: 330px;
-  float: left;
+  @include popular-posts-layout;
   position: relative;
   top: -330px;
   z-index: 0;
 }
 
 .whitetitlesbox {
-  width: 25%;
-  height: 330px;
+  @include popular-posts-layout;
   margin: 0;
-  float: left;
   position: relative;
   top: -660px;
 }
 
 .whitetitles {
-  float: left;
-  font-family: 'oswald' sans serif;
-  font-size: 29px;
+  @include bottom-links-bar;
   margin-top: 86%;
-  margin-left: 6%;
   margin-right: 7%;
   color: white;
   position: relative;
   z-index: 5;
 }
 
-#longertitle {
+.whitetitleslong {
+  @include bottom-links-bar;
   margin-top: 75.5%;
+  margin-right: 7%;
+  color: white;
+  position: relative;
+  z-index: 5;
   line-height: 35px;
-
 }
 
 footer {
   width: 100%;
   height: 96px;
-  background-color: #003353;
+  background-color: $heading-dark-blue;
   margin-top: 330px;
 }
 
@@ -615,34 +640,35 @@ footer {
   margin-left: 151px;
 }
 
-#tagline {
+.tagline {
   height: 20px;
   font-family: "Open sans" sans-serif;
   float: left;
   position: relative;
   top: -621px;
   font-size: 13px;
-  color: #a3b3bf;
+  color: $footer-text;
   margin-left: 1%;
 }
 
 .navitems {
-position: relative;
-display: inline-block;
-bottom: 621px;
-left: 22.5%;
-font-size: 14px;
-height: 20px;
+  position: relative;
+  display: inline-block;
+  bottom: 621px;
+  left: 22.5%;
+  font-size: 14px;
+  height: 20px;
 }
 
 .navitems > a {
   text-decoration: none;
   font-family: "Open Sans" sans serif;
+  color: $footer-text;
 }
 
 .nav2 {
-  border-right: 1px solid #a0b3c0;
-  border-left: 1px solid #a0b3c0;
+  border-right: 1px solid $footer-text;
+  border-left: 1px solid $footer-text;
   padding-left: 7px;
   margin-left: 3px;
   padding-right: 7px;
@@ -650,7 +676,7 @@ height: 20px;
 }
 
 .nav3 {
-  border-right: 1px solid #a0b3c0;
+  border-right: 1px solid $footer-text;
   padding-right: 7px;
   margin-right: 3px;
 }
