--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -595,30 +595,77 @@ a {
 
 .popular {
   @include popular-posts-layout;
-  position: relative;
-  top: -330px;
+  margin-top: -330px;
   z-index: 0;
+}
+
+.popular2 {
+  @include popular-posts-layout;
+  margin-top: -330px;
+  z-index: 0;
+  position: relative;
+  left: 25%;
+}
+
+.popular3 {
+  @include popular-posts-layout;
+  margin-top: -330px;
+  z-index: 0;
+  position: relative;
+  left: 50%;
+}
+
+.popular4 {
+  @include popular-posts-layout;
+  margin-top: -330px;
+  z-index: 0;
+  position: relative;
+  left: 75%;
 }
 
 .whitetitlesbox {
   @include popular-posts-layout;
   margin: 0;
+  margin-top: -660px;
+}
+
+.whitetitlesbox2 {
+  @include popular-posts-layout;
+  margin: 0;
+  margin-top: -660px;
   position: relative;
-  top: -660px;
+  left: 25%;
+}
+
+.whitetitlesbox3 {
+  @include popular-posts-layout;
+  margin: 0;
+  margin-top: -660px;
+  position: relative;
+  left: 50%;
+}
+
+.whitetitlesbox4 {
+  @include popular-posts-layout;
+  margin: 0;
+  margin-top: -660px;
+  position: relative;
+  left: 75%;
 }
 
 .whitetitles {
   @include bottom-links-bar;
-  margin-top: 86%;
+  margin-top: 21em;
   margin-right: 7%;
   color: white;
   position: relative;
   z-index: 5;
+  outline: 1px solid red;
 }
 
 .whitetitleslong {
   @include bottom-links-bar;
-  margin-top: 75.5%;
+  margin-top: 19.85em;
   margin-right: 7%;
   color: white;
   position: relative;
@@ -636,7 +683,7 @@ footer {
 .ironyardlogo {
   float: left;
   position: relative;
-  top: -646px;
+  top: 14px;
   margin-left: 151px;
 }
 
@@ -645,18 +692,17 @@ footer {
   font-family: "Open sans" sans-serif;
   float: left;
   position: relative;
-  top: -621px;
+  top: 39px;
   font-size: 13px;
   color: $footer-text;
-  margin-left: 1%;
+  margin-left: 10px;
 }
 
 .navitems {
-  position: relative;
   display: inline-block;
-  bottom: 621px;
-  left: 22.5%;
-  font-size: 14px;
+  margin-top: 38px;
+  margin-left: 24%;
+  font-size: 13px;
   height: 20px;
 }
 
